--- a/src/packs/cwn-program/Machine.yml
+++ b/src/packs/cwn-program/Machine.yml
@@ -5,8 +5,8 @@ data:
     Security panels, factory machinery, electronic minefields, or any other hackable
     device not covered under an existing Subject. Its generality applies a +1 penalty
     to the security difficulty.
-  selfTerminating: true
-  skillCheckMod: -1
+  selfTerminating: false
+  skillCheckMod: '-1'
   target: Device
   type: subject
   useAffects: Unclassified devices
