--- a/src/packs/cwn-program/Sensor.yml
+++ b/src/packs/cwn-program/Sensor.yml
@@ -5,8 +5,8 @@ data:
     Similar to the Camera element, this code block handles sensors of any kind, regardless
     of what they are intended to detect. The generality of the element decreases its
     efficiency, however, and it applies a +1 security difficulty penalty.
-  selfTerminating: true
-  skillCheckMod: -1
+  selfTerminating: false
+  skillCheckMod: '-1'
   target: Device
   type: subject
   useAffects: Any sensors at -1 penalty
