--- a/src/packs/cwn-program/Blind.yml
+++ b/src/packs/cwn-program/Blind.yml
@@ -7,7 +7,7 @@ data:
     cameras sense nothing, and laser tripwires don't register the beam. Blind characters
     can't effectively attack at range, their movement rate is halved, and they suffer
     a -4 penalty to both AC and melee hit rolls.
-  selfTerminating: true
+  selfTerminating: false
   skillCheckMod: 0
   target: Device/Cyber
   type: verb
