--- a/src/packs/cwn-program/Camera.yml
+++ b/src/packs/cwn-program/Camera.yml
@@ -5,7 +5,7 @@ data:
     Any device that transmits audiovisual information. Some defensive hardware has
     its own onboard camera, which is susceptible to this target, while the others
     rely on a separate device's input.
-  selfTerminating: true
+  selfTerminating: false
   skillCheckMod: 0
   target: Device
   type: subject
