--- a/src/packs/cwn-program/Drone.yml
+++ b/src/packs/cwn-program/Drone.yml
@@ -5,7 +5,7 @@ data:
     A remote-controlled drone. The base difficulty is equal to 7 plus the operator's
     level or HD/3, rounded up, or 8 if it's not actively controlled. Like the Cyber
     Subject, it is not necessary to manifest in a drone's node to hack it wirelessly.
-  selfTerminating: true
+  selfTerminating: false
   skillCheckMod: 0
   target: Device
   type: subject
