--- a/src/packs/cwn-program/Siege.yml
+++ b/src/packs/cwn-program/Siege.yml
@@ -5,7 +5,7 @@ data:
     If a Device is successfully Sieged, its network connections are severed for everyone
     but the hacker, blocking transit, data, or drone control. Defenders can run Terminate
     Program against it from any adjacent node.
-  selfTerminating: true
+  selfTerminating: false
   skillCheckMod: '-2'
   target: Device
   type: verb
