--- a/src/packs/cwn-items/Bus pass,monthly.yml
+++ b/src/packs/cwn-items/Bus pass,monthly.yml
@@ -3,7 +3,7 @@ data:
   description: >-
     A critical mobility resource for the first mission of many operators.
   encumbrance: 0
-  noEncReadied: true
+  noEncReadied: false
 img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Bus pass,monthly
 type: item
