--- a/src/packs/cwn-items/Radio,handheld.yml
+++ b/src/packs/cwn-items/Radio,handheld.yml
@@ -4,7 +4,7 @@ data:
     Both conventional handheld radios and ultra-convenient headset or collar-tab radios
     can be had. Ranges are one kilometer in the city and six in an open, flat area.
   encumbrance: 1
-  noEncReadied: true
+  noEncReadied: false
 img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Radio,handheld
 type: item
