--- a/src/packs/cwn-weapons/Big Sword.yml
+++ b/src/packs/cwn-weapons/Big Sword.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 0
-    suppress: true
+    suppress: false
     type: None
     value: 0
   cost: 500
@@ -14,7 +14,7 @@ data:
     \ due to their ungainly make. This is a two-handed weapon, making it impossible\
     \ to have a Readied item in the user's off-hand"
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 0
     normal: 0
