--- a/src/packs/cwn-weapons/Demo Charge.yml
+++ b/src/packs/cwn-weapons/Demo Charge.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: None
-    suppress: true
+    suppress: false
     type: None
     value: None
   cost: 1000
@@ -17,7 +17,7 @@ data:
     and can provoke more heat than many operators like to draw. This weapon's Trauma
     Die can inflict Traumatic Hits on drones, vehicles, and other machines.
   encumbrance: 1
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 20
     normal: 20
