--- a/src/packs/cwn-items/Binoculars.yml
+++ b/src/packs/cwn-items/Binoculars.yml
@@ -4,7 +4,7 @@ data:
     Most modern binocs have low-light functionality and magnification sufficient to
     bring targets as much as a kilometer distant into view.
   encumbrance: 1
-  noEncReadied: true
+  noEncReadied: false
 img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Binoculars
 type: item
