--- a/src/packs/cwn-items/Lockpicks.yml
+++ b/src/packs/cwn-items/Lockpicks.yml
@@ -4,7 +4,7 @@ data:
     Both manual lockpicks and a selection of useful electronic shims sufficient to
     threaten most modern locks.
   encumbrance: 1
-  noEncReadied: true
+  noEncReadied: false
 img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Lockpicks
 type: item
