--- a/src/packs/cwn-items/Smartphone,fashionable.yml
+++ b/src/packs/cwn-items/Smartphone,fashionable.yml
@@ -4,7 +4,7 @@ data:
     Corp-approved media devices are cheap and ubiquitous, but few operators trust
     them with sensitive information.
   encumbrance: 0
-  noEncReadied: true
+  noEncReadied: false
 img: systems/swnr/assets/icons/game-icons.net/item-icons/item-white.svg
 name: Smartphone,fashionable
 type: item
