--- a/src/packs/cwn-weapons/Advanced Big Sword.yml
+++ b/src/packs/cwn-weapons/Advanced Big Sword.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 0
-    suppress: true
+    suppress: false
     type: None
     value: 0
   cost: 2500
@@ -17,7 +17,7 @@ data:
     particular knife manufacturers. This is a two-handed weapon, making it impossible
     to have a Readied item in the user's off-hand
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 0
     normal: 0
