--- a/src/packs/cwn-weapons/Advanced Club.yml
+++ b/src/packs/cwn-weapons/Advanced Club.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 0
-    suppress: true
+    suppress: false
     type: None
     value: 0
   cost: 500
