--- a/src/packs/cwn-weapons/Body Blades I.yml
+++ b/src/packs/cwn-weapons/Body Blades I.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: None
-    suppress: true
+    suppress: false
     type: None
     value: None
   cost: 10000
@@ -14,7 +14,7 @@ data:
     add damage to Body Blades attacks. When not in use, the blades are perceptible
     only to a medical scan.
   encumbrance: 0
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 0
     normal: 0
