--- a/src/packs/cwn-weapons/Body Blades II.yml
+++ b/src/packs/cwn-weapons/Body Blades II.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: None
-    suppress: true
+    suppress: false
     type: None
     value: None
   cost: 25000
@@ -14,7 +14,7 @@ data:
     and a Trauma Die 1d10/x3. Anyone who sees or touches their arms can detect signs
     of the cyber, however.
   encumbrance: 0
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 0
     normal: 0
