--- a/src/packs/cwn-weapons/Grenade,Flash.yml
+++ b/src/packs/cwn-weapons/Grenade,Flash.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 0
-    suppress: true
+    suppress: false
     type: None
     value: 0
   cost: 50
@@ -16,7 +16,7 @@ data:
     Flashbang effects don't stack, and a target who makes their save cannot be flashbanged
     again that same round.
   encumbrance: 1
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 30
     normal: 10
