--- a/src/packs/cwn-weapons/Grenade,Frag.yml
+++ b/src/packs/cwn-weapons/Grenade,Frag.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 0
-    suppress: true
+    suppress: false
     type: None
     value: 0
   cost: 100
@@ -15,7 +15,7 @@ data:
     grenade's damage, and each point of melee AC the target has above 14 reduces the
     final damage total by one point, possibly down to zero.
   encumbrance: 1
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 30
     normal: 10
