--- a/src/packs/cwn-weapons/Land Mine, Anti-Vehic..yml
+++ b/src/packs/cwn-weapons/Land Mine, Anti-Vehic..yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: None
-    suppress: true
+    suppress: false
     type: None
     value: None
   cost: 1000
@@ -16,7 +16,7 @@ data:
     case. This weapon's Trauma Die can inflict Traumatic Hits on drones, vehicles,
     and other machines.
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 0
     normal: 0
