--- a/src/packs/cwn-weapons/Rocket Launcher.yml
+++ b/src/packs/cwn-weapons/Rocket Launcher.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 1
-    suppress: true
+    suppress: false
     type: special
     value: 1
   cost: 5000
@@ -16,7 +16,7 @@ data:
     favor them for their effectiveness in that role. This weapon's Trauma Die can
     inflict Traumatic Hits on drones, vehicles, and other machines.
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 4000
     normal: 2000
