--- a/src/packs/cwn-weapons/Semi-Auto Shotgun.yml
+++ b/src/packs/cwn-weapons/Semi-Auto Shotgun.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 6
-    suppress: true
+    suppress: false
     type: ammo
     value: 6
   cost: 1000
@@ -15,7 +15,7 @@ data:
     given are for shot shells; slugs double their normal and extreme ranges but apply
     a -1 penalty to hit rolls.
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 30
     normal: 10
