--- a/src/packs/cwn-weapons/Sniper Rifle.yml
+++ b/src/packs/cwn-weapons/Sniper Rifle.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 1
-    suppress: true
+    suppress: false
     type: ammo
     value: 1
   cost: 3000
@@ -13,7 +13,7 @@ data:
     statistics are the same as a normal rifle. This weapon can be reloaded with a
     Move action, or an On Turn if the user has at least Shoot-1 skill.
   encumbrance: 2
-  isNonLethal: true
+  isNonLethal: false
   range:
     max: 2,000
     normal: 1000
