--- a/src/packs/cwn-weapons/Taser Pistol.yml
+++ b/src/packs/cwn-weapons/Taser Pistol.yml
@@ -1,8 +1,8 @@
 data:
   ammo:
-    burst: true
+    burst: false
     max: 2
-    suppress: true
+    suppress: false
     type: ammo
     value: 2
   cost: 500
