--- a/src/template.yml
+++ b/src/template.yml
@@ -40,6 +40,7 @@ Actor:
       traumaTarget: 6
       speed: 10
       ab: 0
+      meleeAb: 0
       systemStrain:
         value: 0
         permanent: 0
