cwn weapon none ammo fix and add damage to chat messages with 1 roll

--- a/src/packs/cwn-weapons/Body Blades I.yml
+++ b/src/packs/cwn-weapons/Body Blades I.yml
@@ -3,7 +3,7 @@ data:
     burst: false
     max: None
     suppress: false
-    type: None
+    type: none
     value: None
   cost: 10000
   damage: 1d8
