--- a/src/packs/cwn-weapons/Body Blades II.yml
+++ b/src/packs/cwn-weapons/Body Blades II.yml
@@ -3,7 +3,7 @@ data:
     burst: false
     max: None
     suppress: false
-    type: None
+    type: none
     value: None
   cost: 25000
   damage: 2d6
