--- a/src/packs/cwn-weapons/Land Mine, Anti-Vehic..yml
+++ b/src/packs/cwn-weapons/Land Mine, Anti-Vehic..yml
@@ -3,7 +3,7 @@ data:
     burst: false
     max: None
     suppress: false
-    type: None
+    type: none
     value: None
   cost: 1000
   damage: 3d8
