--- a/src/packs/cwn-weapons/Unarmed Attack.yml
+++ b/src/packs/cwn-weapons/Unarmed Attack.yml
@@ -3,7 +3,7 @@ data:
     burst: false
     max: 0
     suppress: false
-    type: None
+    type: none
     value: 0
   cost: None
   damage: 1d2
@@ -12,7 +12,7 @@ data:
     \ fashion makeshift machetes and improvised shivs when better can\u2019t be obtained.\
     \ Such weapons are effectively free, but have a -1 penalty to hit and damage rolls\
     \ due to their ungainly make."
-  encumbrance: None
+  encumbrance: 0
   isNonLethal: true
   range:
     max: 0
