--- a/src/template.yml
+++ b/src/template.yml
@@ -53,6 +53,9 @@ Actor:
         value: 0
         bonus: 0
       cyberdecks: []
+      soakTotal:
+        value: 0
+        max: 0
     encumbrance:
       encumbrance:
         stowed:
