--- a/src/packs/cwn-drone-fittings/Ablative Code Buffer.yml
+++ b/src/packs/cwn-drone-fittings/Ablative Code Buffer.yml
@@ -5,6 +5,7 @@ data:
     ing intrusions. The drone automatically succeeds on the first opposed skill check
     made against a hostile hacker in a given scene.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Ablative Code Buffer
 type: shipFitting
