--- a/src/packs/cwn-drone-fittings/Command Deck-Follow.yml
+++ b/src/packs/cwn-drone-fittings/Command Deck-Follow.yml
@@ -7,6 +7,7 @@ data:
     to follow, and full speed will use both Move and Main Actions. Following can be
     ended as an On Turn command.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Command Deck/Follow
 type: shipFitting
