--- a/src/packs/cwn-drone-fittings/Command Deck-Kill.yml
+++ b/src/packs/cwn-drone-fittings/Command Deck-Kill.yml
@@ -8,6 +8,7 @@ data:
     automatically move to follow or engage its target or otherwise position itself
     tactically unless directly piloted to do so or operating under the Follow command.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Command Deck/Kill
 type: shipFitting
