--- a/src/packs/cwn-drone-fittings/Command Deck-Patrol.yml
+++ b/src/packs/cwn-drone-fittings/Command Deck-Patrol.yml
@@ -6,6 +6,7 @@ data:
     to loiter at a particular location until it gets an On Turn command to proceed
     to the next location.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Command Deck/Patrol
 type: shipFitting
