--- a/src/packs/cwn-drone-fittings/Enhanced Structure.yml
+++ b/src/packs/cwn-drone-fittings/Enhanced Structure.yml
@@ -1,9 +1,11 @@
 data:
   cost: 0.25
-  description: "The drone\u2019s maximum hit points increase by 25% of its unmodified\
-    \ base, rounded up. As with Improved Armor, this fitting is ineffective on drones\
-    \ that aren\u2019t man-portable."
+  description: >-
+    The drone`s maximum hit points increase by 25% of its unmodified base, rounded
+    up. As with Improved Armor, this fitting is ineffective on drones that aren`t
+    man-portable.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Enhanced Structure
 type: shipFitting
