--- a/src/packs/cwn-drone-fittings/No Touch Web.yml
+++ b/src/packs/cwn-drone-fittings/No Touch Web.yml
@@ -8,6 +8,7 @@ data:
     before the battery must be recharged. The firm contact required makes it impractical
     to use the web as an offensive weapon.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: No Touch Web
 type: shipFitting
