--- a/src/packs/cwn-drone-fittings/Weapon Hardpoint.yml
+++ b/src/packs/cwn-drone-fittings/Weapon Hardpoint.yml
@@ -1,10 +1,12 @@
 data:
   cost: 0.25
-  description: "Drones that are not factory-equipped with weapon hardpoints can have\n\
-    \ one worked in as an aftermarket addition. The\n usual hardpoint limits on maximum\
-    \ allowed\n weapon size still apply, however, and this fitting \ncounts as two\
-    \ for purposes of the drone\u2019s maximum fittings."
+  description: >-
+    Drones that are not factory-equipped with weapon hardpoints can have one worked
+    in as an aftermarket addition. The usual hardpoint limits on maximum allowed weapon
+    size still apply, however, and this fitting counts as two for purposes of the
+    drone`s maximum fittings.
   mass: 1
+  type: drone
 img: systems/swnr/assets/icons/game-icons.net/item-icons/power-generator.svg
 name: Weapon Hardpoint
 type: shipFitting
