--- a/src/packs/cwn-vehicle-weapons/Main Tank Gun.yml
+++ b/src/packs/cwn-vehicle-weapons/Main Tank Gun.yml
@@ -6,7 +6,9 @@ data:
   cost: 100000
   damage: 4d12
   description: >-
-    None
+    Main tank gun attacks always target AC 10, and anyone within 10 meters of impact
+    takes 1d20 damage if not behind heavy cover. They cannot be mounted on aircraft
+    or anything smaller than a tank. Each round costs $1,000.
   effect: AC 10 to hit
   mass: 4
   minClass: l
@@ -19,9 +21,7 @@ data:
     die: 1d20
     rating: 4
     vehicle: true
-  type: Main tank gun attacks always target AC 10, and anyone within 10 meters of
-    impact takes 1d20 damage if not behind heavy cover. They cannot be mounted on
-    aircraft or anything smaller than a tank. Each round costs $1,000.
+  type: vehicle
 img: systems/swnr/assets/icons/game-icons.net/item-icons/sinusoidal-beam.svg
 name: Main Tank Gun
 type: shipWeapon
