--- a/src/packs/cwn-weapons/Big Club.yml
+++ b/src/packs/cwn-weapons/Big Club.yml
@@ -7,9 +7,9 @@ data:
     value: 0
   cost: 100
   damage: 1d10
-  description: "Knives, clubs, swords, and other simple melee weap- ons are available\
-    \ almost anywhere on the street. Par- ticularly impoverished gangers sometimes\
-    \ fashion makeshift machetes and improvised shivs when better can\u2019t be obtained.\
+  description: "Knives, clubs, swords, and other simple melee weapons are available\
+    \ almost anywhere on the street. Particularly impoverished gangers sometimes fashion\
+    \ makeshift machetes and improvised shivs when better can\u2019t be obtained.\
     \ Such weapons are effectively free, but have a -1 penalty to hit and damage rolls\
     \ due to their ungainly make. This is a two-handed weapon, making it impossible\
     \ to have a Readied item in the user's off-hand"
@@ -18,7 +18,7 @@ data:
   range:
     max: 0
     normal: 0
-  secondStat: None
+  secondStat: none
   shock:
     ac: 18
     dmg: 2
